site/docs/4.0.4/api/python/_sources/reference/pyspark.sql/api/pyspark.sql.SparkSession.rst.txt
..  Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

..    http://www.apache.org/licenses/LICENSE-2.0

..  Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

.. Workaround to avoid documenting __init__.

pyspark.sql.SparkSession
========================

.. currentmodule:: pyspark.sql

.. autoclass:: SparkSession

   


   .. rubric:: Methods

   .. autosummary::
      
      ~SparkSession.active
      ~SparkSession.addArtifact
      ~SparkSession.addArtifacts
      ~SparkSession.addTag
      ~SparkSession.clearProgressHandlers
      ~SparkSession.clearTags
      ~SparkSession.copyFromLocalToFs
      ~SparkSession.createDataFrame
      ~SparkSession.getActiveSession
      ~SparkSession.getTags
      ~SparkSession.interruptAll
      ~SparkSession.interruptOperation
      ~SparkSession.interruptTag
      ~SparkSession.newSession
      ~SparkSession.range
      ~SparkSession.registerProgressHandler
      ~SparkSession.removeProgressHandler
      ~SparkSession.removeTag
      ~SparkSession.sql
      ~SparkSession.stop
      ~SparkSession.table




   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SparkSession.builder
      ~SparkSession.catalog
      ~SparkSession.client
      ~SparkSession.conf
      ~SparkSession.dataSource
      ~SparkSession.profile
      ~SparkSession.read
      ~SparkSession.readStream
      ~SparkSession.sparkContext
      ~SparkSession.streams
      ~SparkSession.tvf
      ~SparkSession.udf
      ~SparkSession.udtf
      ~SparkSession.version
   
   